# Proyect-Visualization

./: .gitignore  404.html  Alex_Notebook_V4.ipynb  EDA.ipynb  Example2_Energy.ipynb  Global_EV_clean.csv  LICENSE  Milan_Notebook.ipynb  Milan_Notebook_GIT.ipynb  P6_deliverable.ipynb  P6_deliverable_final.ipynb  README.md  Renewable_Energy.csv  __init__.py  _version.py  base_widget.py  graphs.py  index.html  pyproject.toml  tests_library copy.ipynb  tests_library.ipynb
.github/workflows/: deploy.yml
.ipynb_checkpoints/: Milan_Notebook-checkpoint.ipynb
Isea/: Energy_clean.csv  Global_EV_clean_ready.csv  Global_EV_percapita.csv  Global_EV_popweighted.csv  __init__.py  _version.py  base_widget.py  bubble.py  energy_dashboard.py  energy_quad.py  graphs.py  heatmap.py  layouts.py  medias.py  parallel.py  radial_stacked_bar.py  scatter.py  trendline.py  widgets.py  world_renewable.py  worldmaplinechart.py
Isea/.ipynb_checkpoints/: scatter_factory-checkpoint.py
Isea/assets/: bubble.js  bubble_map.js  country_panel.js  energy_quad.js  heatmap.js  main.js  parallel.js  radial_stacked_bar.js  scatter.js  sunburst.js  theme.js  trendline.js  wide.csv  worldmaplinechart.js  worldrenewable.js
Isea/assets/.ipynb_checkpoints/: scatter-checkpoint.js
Isea/webapp/: app.py
Isea/webapp/static/: main.js  style.css
Isea/webapp/static/components/: bubble_map.js  country_panel.js  sunburst.js  theme.js
Isea/webapp/templates/: index.html
ev_docs_website/: mkdocs.yml
ev_docs_website/docs/: desktop.ini  getting_started.md  index.md
ev_docs_website/docs/tutorials/: infrastructure.md  transition.md
ev_docs_website/docs/visualizations/: bubble_chart.md  heatmap_chart.md  ml_panel.md  parallel_plot.md  scatter_plot.md  trendline_chart.md  visualizations.md  world_map.md
getting_started/: index.html
search/: search_index.json
tutorials/infrastructure/: index.html
tutorials/transition/: index.html
visualizations/bubble_chart/: index.html
visualizations/heatmap_chart/: index.html
visualizations/ml_panel/: index.html
visualizations/parallel_plot/: index.html
visualizations/scatter_plot/: index.html
visualizations/trendline_chart/: index.html
visualizations/visualizations/: index.html
visualizations/world_map/: index.html
