[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Isea"
version = "0.1.0"
description = "Isea: D3-powered visualizations for Python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["anywidget>=0.9", "traitlets>=5.9"]

[tool.hatch.build]
include = ["Isea/**", "README.md","Isea/assets/**" ]
